--- a/blog/2019-05-28-hola.md
+++ b/blog/2019-05-28-hola.md
@@ -1,12 +1,10 @@
 ---
-slug: hola
+id: React
 title: Hola
-author: Gao Wei
+author: 扬俏
 author_title: Docusaurus Core Team
 author_url: https://github.com/wgao19
-author_image_url: https://avatars1.githubusercontent.com/u/2055384?v=4
-tags: [hola, docusaurus]
+author_image_url: https://i0.hdslb.com/bfs/face/9fca989bbc4aeca5cc553631c3849fdef95deea6.jpg@72w_72h_1c.webp
+tags: [React, docusaurus]
 ---
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum dignissim ultricies. Fusce rhoncus ipsum tempor eros aliquam consequat. Lorem ipsum dolor sit amet
-`
+第一篇博客
